# freertos_app

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  bme280.c  bme280.h  main.c  running.mov  ssd1331.c  ssd1331.h
